Address anchor calibration review findings